<resources>
    <string name="app_name">DouyMusic</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="no_permission_storage">未获得读写权限，即将退出</string>

    <string name="parentheses_count">(%d)</string>
    <string name="parentheses_all_count">(共%d首)</string>

    <string name="musiconline_music">音乐</string>
    <string name="musiconline_video">视频</string>
    <string name="musiconline_radio">电台</string>

    <string name="localmusic">本地音乐&#160;</string>
    <string name="recentplay">最近播放&#160;</string>
    <string name="downloadmanage">下载管理&#160;</string>
    <string name="myradio">我的电台&#160;</string>
    <string name="mycollection">我的收藏&#160;</string>

    <!--本地音乐 tab Text-->
    <string name="localmusic_tab_single">单曲</string>
    <string name="localmusic_tab_singer">歌手</string>
    <string name="localmusic_tab_albums">专辑</string>
    <string name="localmusic_tab_folder">文件夹</string>

    <string name="item_hear_play_all">播放全部</string>
    <string name="item_hear_play_multi_select">多选</string>

    <!--Comm 设置-->
    <string name="setting_key_mobile_network_play">mobile_network_play</string>
    <string name="setting_key_mobile_network_download">mobile_network_download</string>

    <!--音乐播放详情页 开始时间/当前时间-->
    <string name="music_detail_start_time">00:00</string>

    <!--音乐播放模式-->
    <string name="mode_loop">列表循环</string>
    <string name="mode_shuffle">随机播放</string>
    <string name="mode_one">单曲循环</string>

    <string name="loading">加载中…</string>
    <string name="load_fail">加载失败，请检查网络后重试</string>
</resources>
