<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TabLayout
        android:id="@+id/musicOnlineTab"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#ffffff"
        app:tabIndicatorColor="@color/colorApp"
        app:tabSelectedTextColor="@color/colorApp"
        app:tabTextColor="#414141">

        <android.support.design.widget.TabItem
            android:id="@+id/musicOnlineMusic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/musiconline_music"/>

        <android.support.design.widget.TabItem
            android:id="@+id/musicOnlineVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/musiconline_video"/>

        <android.support.design.widget.TabItem
            android:id="@+id/musicOnlineRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/musiconline_radio"/>
    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPagerInner"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/musicOnlineTab"/>
</RelativeLayout>