<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llLocalMusic"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/linearlayout_press_bg"
                android:clickable="true"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/music_list_size"
                    android:layout_height="@dimen/music_list_size"
                    android:padding="13dp"
                    android:src="@drawable/ic_music_red" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/music_list_bottom_line"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/localmusic"
                        android:textColor="@color/app_black_h1"
                        android:textSize="@dimen/music_list_text_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="(13)" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/llRecentMusic"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/linearlayout_press_bg"
                android:clickable="true"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/music_list_size"
                    android:layout_height="@dimen/music_list_size"
                    android:padding="13dp"
                    android:src="@drawable/ic_recent_play" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/music_list_bottom_line"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recentplay"
                        android:textColor="@color/app_black_h1"
                        android:textSize="@dimen/music_list_text_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="(13)" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/llDownloadManage"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/linearlayout_press_bg"
                android:clickable="true"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/music_list_size"
                    android:layout_height="@dimen/music_list_size"
                    android:padding="13dp"
                    android:src="@drawable/ic_download_manage" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/music_list_bottom_line"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/downloadmanage"
                        android:textColor="@color/app_black_h1"
                        android:textSize="@dimen/music_list_text_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="(13)" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/llMyRadio"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/linearlayout_press_bg"
                android:clickable="true"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/music_list_size"
                    android:layout_height="@dimen/music_list_size"
                    android:padding="13dp"
                    android:src="@drawable/ic_my_station" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/music_list_bottom_line"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/myradio"
                        android:textColor="@color/app_black_h1"
                        android:textSize="@dimen/music_list_text_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="(13)" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/llMyCollection"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/linearlayout_press_bg"
                android:clickable="true"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/music_list_size"
                    android:layout_height="@dimen/music_list_size"
                    android:padding="13dp"
                    android:src="@drawable/ic_my_collection" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/music_list_bottom_line"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mycollection"
                        android:textColor="@color/app_black_h1"
                        android:textSize="@dimen/music_list_text_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="(13)" />
                </LinearLayout>

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>

        </LinearLayout>
    </ScrollView>


</LinearLayout>